Header nearly done

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="style.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <header>
+    <h3>Your Result</h3>
+    <div class="scoreOfTotal">
+      <h1>76</h1>
+      <p>of 100</p>
+    </div>
+    <h2>Great</h2>
+    <p>You scored higher than 65% of the people who have taken these tests.</p>
+  </header>
+  <hr />
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+  
   
   Summary
 
